--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BreakoutMain.cs" />
+    <Compile Include="Contracts\IGamer.cs" />
+    <Compile Include="Gamer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Score.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
