--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BreakoutMain.cs" />
     <Compile Include="Contracts\IGamer.cs" />
+    <Compile Include="Enums\Directions.cs" />
     <Compile Include="Gamer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Score.cs" />
