--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Contracts\IGamer.cs" />
     <Compile Include="Enums\Directions.cs" />
     <Compile Include="Gamer.cs" />
+    <Compile Include="Models\Brick.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Score.cs" />
   </ItemGroup>
