--- a/Breakout/Breakout.csproj
+++ b/Breakout/Breakout.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="BreakoutMain.cs" />
     <Compile Include="Contracts\IBrick.cs" />
+    <Compile Include="Contracts\IFillingPattern.cs" />
     <Compile Include="Contracts\IGamer.cs" />
     <Compile Include="Contracts\IWall.cs" />
     <Compile Include="Enums\Directions.cs" />
     <Compile Include="Gamer.cs" />
     <Compile Include="Models\Brick.cs" />
+    <Compile Include="Models\Pattern.cs" />
     <Compile Include="Models\Wall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Score.cs" />
